maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:37: error: type mismatch;
 found   : String
 required: Int
      setIndication(x+1,y,"" + c + 1)
                                 ^JediEscaper:43: error: type mismatch;
 found   : String
 required: Int
      setIndication(x-1,y,"" + c + 1)
                                 ^JediEscaper:49: error: type mismatch;
 found   : String
 required: Int
      setIndication(x,y+1,"" + c + 1)
                                 ^JediEscaper:55: error: type mismatch;
 found   : String
 required: Int
      setIndication(x,y-1,"" + c + 1)
                                 ^